[gd_scene load_steps=16 format=2]

[ext_resource path="res://2d/assets/themes/theme.tres" type="Theme" id=1]
[ext_resource path="res://2d/assets/themes/transparent.tres" type="Theme" id=2]
[ext_resource path="res://2d/assets/themes/transparent_borders.tres" type="Theme" id=3]
[ext_resource path="res://2d/assets/themes/transparent-child.tres" type="Theme" id=4]
[ext_resource path="res://2d/source/scripts/scene_header/scene_header.gd" type="Script" id=5]
[ext_resource path="res://2d/source/scripts/runes/rune_buying.gd" type="Script" id=6]
[ext_resource path="res://2d/assets/themes/panel_blue.tres" type="Theme" id=7]
[ext_resource path="res://bundles/assets/images/hud/gold.png" type="Texture" id=8]
[ext_resource path="res://2d/assets/images/sum.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.00392157, 0.211765, 0.882353 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.290196, 0, 0.407843, 0.831373 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.352941, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0392157, 0.411765, 0.52549, 0.313726 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0392157, 0.313726, 0.392157, 0.313726 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0.313726 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[node name="Node2d" type="Node2D" groups=["rune_buying"]]
pause_mode = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 99.0 ],
"_edit_vertical_guides_": [ 232.0 ]
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 1 )

[node name="EventContainerItemsDynamic" type="ScrollContainer" parent="Panel"]
anchor_bottom = 0.013
margin_left = 16.0
margin_top = 169.0
margin_right = 1008.0
margin_bottom = 592.2
focus_mode = 2
mouse_filter = 2
theme = ExtResource( 3 )
custom_styles/bg = SubResource( 1 )
follow_focus = true

[node name="Grid" type="GridContainer" parent="Panel/EventContainerItemsDynamic"]
margin_right = 1015.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 12

[node name="Label" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_right = 33.0
margin_bottom = 22.0
focus_mode = 2
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = " ID "
percent_visible = 0.0

[node name="Texture" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 37.0
margin_right = 37.0
margin_bottom = 22.0

[node name="LabelName" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 41.0
margin_right = 305.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = " Name                                  "

[node name="LabelAmount" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 309.0
margin_right = 372.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = "  AMT."

[node name="LabelMP" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 376.0
margin_right = 449.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = "  MP.    "

[node name="LabelGroup" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 453.0
margin_right = 548.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = "  Group.   "

[node name="LabelGold" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 552.0
margin_right = 638.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = "  Gold.    "

[node name="LabelLevel" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 642.0
margin_right = 704.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = "  LVL. "

[node name="LabelRange" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 708.0
margin_right = 767.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = "  RGE."

[node name="LabelLocation" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 771.0
margin_right = 878.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = "  Location. "

[node name="LabelDefense" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 882.0
margin_right = 948.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = "  STR. "

[node name="LabelStrength" type="Label" parent="Panel/EventContainerItemsDynamic/Grid"]
margin_left = 952.0
margin_right = 1015.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0.172549, 0.843137 )
text = "  DEF. "

[node name="EventContainerItemsStatic" type="ScrollContainer" parent="Panel"]
margin_left = 16.0
margin_top = 152.0
margin_right = 997.0
margin_bottom = 192.0
focus_mode = 2
mouse_filter = 2
theme = ExtResource( 7 )
follow_focus = true

[node name="Grid" type="GridContainer" parent="Panel/EventContainerItemsStatic"]
margin_right = 1047.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 12

[node name="Label" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_right = 33.0
margin_bottom = 22.0
text = " ID "

[node name="Texture" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 37.0
margin_right = 37.0
margin_bottom = 22.0

[node name="LabelName" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 41.0
margin_right = 329.0
margin_bottom = 22.0
text = " Name                                      "

[node name="LabelAmount" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 333.0
margin_right = 397.0
margin_bottom = 22.0
text = " AMT. "

[node name="LabelMP" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 401.0
margin_right = 474.0
margin_bottom = 22.0
text = " MP.     "

[node name="LabelGroup" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 478.0
margin_right = 573.0
margin_bottom = 22.0
text = " Group.    "

[node name="LabelGold" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 577.0
margin_right = 663.0
margin_bottom = 22.0
text = " Gold.     "

[node name="LabelLevel" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 667.0
margin_right = 729.0
margin_bottom = 22.0
text = " LVL.  "

[node name="LabelRange" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 733.0
margin_right = 793.0
margin_bottom = 22.0
text = " RGE. "

[node name="LabelLocation" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 797.0
margin_right = 904.0
margin_bottom = 22.0
text = " Location.  "

[node name="LabelDefense" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 908.0
margin_right = 971.0
margin_bottom = 22.0
text = " DEF.  "

[node name="LabelStrength" type="Label" parent="Panel/EventContainerItemsStatic/Grid"]
margin_left = 975.0
margin_right = 1047.0
margin_bottom = 22.0
text = " STR.   "

[node name="SceneHeader" type="Node2D" parent="."]
z_index = 4096
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="SceneHeader"]
margin_right = 1024.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="SceneHeader"]
margin_left = 9.0
margin_top = 9.0
margin_right = 1033.0
margin_bottom = 49.0
theme = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Title"
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Underline" type="Line2D" parent="SceneHeader"]
position = Vector2( -6.965, 39 )
scale = Vector2( 1.01741, 1 )
points = PoolVector2Array( 1024, 0, 0, 0 )
width = 3.0
default_color = Color( 0, 0, 0, 1 )

[node name="ButtonExit" type="Button" parent="SceneHeader"]
margin_left = 988.0
margin_top = 6.0
margin_right = 1016.0
margin_bottom = 32.0
custom_styles/normal = SubResource( 4 )
text = "X"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LabelMessage" type="Label" parent="."]
margin_left = 43.0
margin_top = 56.0
margin_right = 1112.0
margin_bottom = 78.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.329412, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Select an item then use Keyboard arrow left/right to chang buy amount. Press enter key to buy it."

[node name="PanelRed" type="Panel" parent="."]
margin_left = 997.0
margin_top = 152.0
margin_right = 1008.0
margin_bottom = 169.0
theme = ExtResource( 7 )

[node name="ItemList" type="ItemList" parent="."]
margin_left = 688.0
margin_top = 88.0
margin_right = 896.0
margin_bottom = 120.0
theme = ExtResource( 1 )
items = [ "Item Name", null, false, "Stack_amount", null, false, "MP", null, false, "Group", null, false, "Gold", null, false, "Level", null, false, "Range", null, false, "Location", null, false, "Defense", null, false, "Strength", null, false ]
max_text_lines = 3

[node name="ButtonSort" type="Button" parent="."]
margin_left = 904.0
margin_top = 90.0
margin_right = 984.0
margin_bottom = 120.0
focus_neighbour_left = NodePath("../ArrowDown")
focus_neighbour_right = NodePath("../ArrowUp")
focus_next = NodePath("../ArrowUp")
focus_previous = NodePath("../ArrowDown")
theme = ExtResource( 2 )
text = "Sort"

[node name="SelectButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 195.0
margin_right = 996.0
margin_bottom = 227.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[node name="LabelBuyDisabledMessage" type="Label" parent="."]
visible = false
margin_left = 56.0
margin_top = 288.0
margin_right = 872.0
margin_bottom = 310.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.329412, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Buying of item feature is disabled in builder. Keep Nodes hidden."

[node name="PanelAmount" type="Panel" parent="."]
margin_left = 44.0
margin_top = 89.0
margin_right = 560.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 0 )

[node name="SpriteGold" type="Sprite" parent="."]
position = Vector2( 66, 104 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )

[node name="SpriteSum" type="Sprite" parent="."]
position = Vector2( 393, 104 )
texture = ExtResource( 9 )

[node name="LabelGold" type="Label" parent="."]
margin_left = 96.0
margin_top = 94.0
margin_right = 231.0
margin_bottom = 116.0
theme = ExtResource( 1 )

[node name="LabelTotalPrice" type="Label" parent="."]
margin_left = 416.0
margin_top = 94.0
margin_right = 551.0
margin_bottom = 116.0
theme = ExtResource( 1 )

[node name="SpinBoxAmount" type="SpinBox" parent="."]
margin_left = 292.0
margin_top = 92.0
margin_right = 366.0
margin_bottom = 116.0
theme = ExtResource( 1 )

[node name="ButtonBuy" type="Button" parent="."]
margin_left = 568.0
margin_top = 90.0
margin_right = 656.0
margin_bottom = 120.0
focus_neighbour_left = NodePath("../ArrowDown")
focus_neighbour_right = NodePath("../ArrowUp")
focus_next = NodePath("../ArrowUp")
focus_previous = NodePath("../ArrowDown")
theme = ExtResource( 2 )
text = "Buy"

[node name="DialogBuy" type="ConfirmationDialog" parent="."]
rect_min_size = Vector2( 550, 130 )
theme = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="DialogBought" type="AcceptDialog" parent="."]
rect_min_size = Vector2( 550, 130 )
theme = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="SceneHeader/ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="pressed" from="ButtonSort" to="." method="_on_ButtonSort_pressed"]
[connection signal="value_changed" from="SpinBoxAmount" to="." method="_on_SpinBoxAmount_value_changed"]
[connection signal="pressed" from="ButtonBuy" to="." method="_on_Buy_pressed"]
[connection signal="confirmed" from="DialogBuy" to="." method="_on_DialogBuy_confirmed"]
[connection signal="hide" from="DialogBuy" to="." method="_on_DialogBuy_hide"]
[connection signal="hide" from="DialogBought" to="." method="_on_DialogBought_hide"]
